# cctemplate

./: .gitignore  .travis.yml  ANNOUNCE  Makefile.am  NEWS  README  README.md  acinclude.m4  autogen.sh  codecov.yml  configure.ac  configure.sh
doc/: Makefile.am  ccexceptions-macros.texi  cctemplate.texi  macros.texi  overview-linking.texi
meta/autoconf/: ax-gcc-version.m4  mmux-check-page-shift.m4  mmux-check-page-size.m4  mmux-check-target-os.m4  mmux-core.m4  mmux-lang-c11.m4  mmux-pkg-config-find-include-file.m4
meta/automake/: mmux-makefile-rules
meta/scripts/: cctemplate.pc.in
meta/slackware/: slack-desc.in
meta/travis-ci/: install-ccexceptions.sh  install-ccmemory.sh  install-ccpathnames.sh  install-ccstrings.sh  install-ccstructs.sh  install-cctests.sh  install-re2.sh
src/: Makefile.am  cctemplate-conditions.c  cctemplate-internals.h  cctemplate-library.c  cctemplate-version.c  cctemplate.h
tests/: Makefile.am  condition-objects.c  condition-subtyping-some-error-body.c  condition-subtyping-some-error-header.h  condition-subtyping-some-error.c  test-version.c  version.c
